Fixed header z-index bug

--- a/css/header.css
+++ b/css/header.css
@@ -19,6 +19,7 @@ header {
     align-items: center;
     color: white;
     width: 100%;
+    z-index: 100;
 }
 
 header.black {
